--- a/app/static/form-style.css
+++ b/app/static/form-style.css
@@ -84,3 +84,9 @@ form input[type="submit"]:hover {
 
 /* Additional Styles */
 /* Add any additional styles you might want here */
+.user-info {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 18px;
+}
