gathered user information from Duke APIs

--- a/app/templates/upload.html
+++ b/app/templates/upload.html
@@ -10,6 +10,9 @@
         <div class="user-info">
             Welcome, {{ user }}
         </div>
+        <script>
+            console.log("profile : {{ info | tojson }}");
+        </script>
     {% endif %}
     <div class="centered-container">
         <h1>Upload File to Duke CREATE</h1>
