--- a/app/static/form-style.css
+++ b/app/static/form-style.css
@@ -90,3 +90,14 @@ form input[type="submit"]:hover {
     right: 10px;
     font-size: 18px;
 }
+
+button {
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    font-size: 16px;
+    background-color: #002a53; 
+    color: #ffffff;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
