--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -2,11 +2,14 @@
 <html>
 <head>
     <title>Duka Data Upload Login</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='form-style.css') }}">
 </head>
 <body>
-    <h2>Login to CREATE Data Upload</h2>
-    <form action="{{ url_for('app_routes.sso_login') }}" method="get">
-        <button type="submit">SSO</button>
-    </form>
+    <div class=centered-container>
+        <h2>Login with Duke OAuth</h2>
+        <form action="{{ url_for('app_routes.sso_login') }}" method="get">
+            <button type="submit">SSO</button>
+        </form>
+    </div>
 </body>
 </html>
